# fastapi-token-new

./: .env  .env-prod  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config.py  docker-compose-local.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
auth/: auth.py  database.py  manager.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 1a2d1bccc13c_create_db.py  2023_06_18_1604-fba32410b256_create_salary_model.py  2023_06_18_1608-f82da5abebaa_create_salary_model.py  2023_06_18_1610-bf1236525da9_create_salary_model.py  2023_06_18_1613-718bedd9a0ec_create_salary_model.py  2023_06_18_1848-b529e312fec0_decided_to_drop_salary_table.py  2023_06_18_1851-a8a45a0ee338_fix_date_naming.py  2023_06_18_1910-b06dbf929a15_fix_date_naming.py
src/: config.py  db.py  main.py
src/auth/: manager.py  models.py  router.py  schemas.py  utils.py
src/operations/: router.py
src/salary/: models.py  router.py  schemas.py
tests/: conftest.py  test.py  test_auth.py  test_salary.py
