[tool.poetry]
name = "fastapi-token"
version = "0.1.0"
description = ""
authors = ["Ramil Mavliutov <stirk2281337@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_token"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
